# QuattroAgents

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.agent-factory/history/: 2026-07-21T00-17-52-838208Z-analysis.json  2026-07-21T00-20-56-194940Z-analysis.json  2026-07-21T00-23-49-453353Z-analysis.json
.agent-factory/overrides/: .agents__skills__fix-bug__SKILL.md.json  .agents__skills__implement-feature__SKILL.md.json  .agents__skills__review-change__SKILL.md.json  .agents__skills__run-regression-analysis__SKILL.md.json  .agents__skills__update-dependencies__SKILL.md.json  .agents__skills__update-documentation__SKILL.md.json  .claude__agents__architecture-guardian.md.json  .claude__agents__ci-build-agent.md.json  .claude__agents__code-reviewer.md.json  .claude__agents__dependency-agent.md.json  .claude__agents__documentation-agent.md.json  .claude__agents__implementation-agent.md.json  .claude__settings.json.json  (+21 more)
.claude/: settings.json
.codex/: config.toml
.githooks/: commit-msg  pre-commit  pre-push
.quattroagents/: capability-map.json  context-manifest.json  fleet.json  model-routing.json  project-profile.json  quality-gates.json
docs/: architecture.md  benchmarking.md  codex-multi-agent.md  communication-protocol.md  gates.md  mcp.md  model-routing.md  providers.md  quattroagents-mcp.md  roadmap.md  self-hosting.md  swarm.md
scripts/: benchmark-local-operations.py  bootstrap-dev.sh  detect-codebase-memory-mcp.sh  detect-rtk.sh  project-health.sh  rtk.sh  setup.ps1  setup.sh
(+124 files in other folders)
