[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quattroagents"
version = "0.2.0"
description = "Provider-neutral, local-first coding-agent fleet configuration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "QuattroAgents contributors"}]
dependencies = []

[project.optional-dependencies]
dev = ["build>=1.2", "mypy>=1.10", "pytest>=8.0", "ruff>=0.6"]

[project.scripts]
qagents = "quattroagents.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
